@@ -1,31 +1,30 @@
 package com.cab302.cab302project.controller.user;
 
-import com.cab302.cab302project.ApplicationState;
 import com.cab302.cab302project.HelloApplication;
-import com.cab302.cab302project.model.userSecQuestions.IUserSecurityQuestionDAO;
+import com.cab302.cab302project.model.user.User;
 import com.cab302.cab302project.model.userSecQuestions.SqliteUserSecurityQuestionDAO;
 import com.cab302.cab302project.model.userSecQuestions.UserSecurityQuestion;
+
+import javafx.collections.FXCollections;
 import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Scene;
-import javafx.scene.control.Button;
-import javafx.scene.control.ComboBox;
-import javafx.scene.control.TextField;
+import javafx.scene.control.*;
 import javafx.stage.Stage;
-import com.cab302.cab302project.model.user.User;
 
 import java.io.IOException;
-import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 
 public class AddSecurityQuestionController {
 
     @FXML
-    private ComboBox<String> firstQuestionComboBox;
+    private ComboBox<String> FirstQuestionComboBox;
     @FXML
-    private ComboBox<String> secondQuestionComboBox;
+    private ComboBox<String> SecondQuestionComboBox;
     @FXML
-    private ComboBox<String> thirdQuestionComboBox;
+    private ComboBox<String> ThirdQuestionComboBox;
     @FXML
     private TextField FirstAnswerTextField;
     @FXML
@@ -37,43 +36,105 @@ public class AddSecurityQuestionController {
     @FXML
     private Button RegisterButton;
 
-    private List<String> securityQuestions = Arrays.asList(
-            "What is your mother's maiden name?",
-            "What was the name of your first pet?",
-            "What was your high school nickname?",
-            "In what city were you born?",
-            "What is your favorite colour?"
+    private User tempUser;
+
+    public void setTempUser(User user) {
+        this.tempUser = user;
+    }
+
+    private final List<String> SecQuestionList = List.of(
+            "Question 1",
+            "Question 2",
+            "Question 3",
+            "Question 4",
+            "Question 5"
     );
 
     @FXML
     public void initialize() {
-        firstQuestionComboBox.getItems().addAll(securityQuestions);
-        secondQuestionComboBox.getItems().addAll(securityQuestions);
-        thirdQuestionComboBox.getItems().addAll(securityQuestions);
+
+        FirstQuestionComboBox.setItems(FXCollections.observableArrayList(SecQuestionList));
+        SecondQuestionComboBox.setItems(FXCollections.observableArrayList(SecQuestionList));
+        ThirdQuestionComboBox.setItems(FXCollections.observableArrayList(SecQuestionList));
+
+        FirstQuestionComboBox.setOnAction(e -> handleComboBoxChange(FirstQuestionComboBox));
+        SecondQuestionComboBox.setOnAction(e -> handleComboBoxChange(SecondQuestionComboBox));
+        ThirdQuestionComboBox.setOnAction(e -> handleComboBoxChange(ThirdQuestionComboBox));
+    }
+
+    private boolean isUpdating = false;
+
+    private void handleComboBoxChange(ComboBox<String> source) {
+        if (isUpdating) return;
+        isUpdating = true;
+        updateComboBoxes(source);
+        isUpdating = false;
+
+    }
+
+    private void updateComboBoxes(ComboBox<String> changedBox) {
+        String selected1 = FirstQuestionComboBox.getValue();
+        String selected2 = SecondQuestionComboBox.getValue();
+        String selected3 = ThirdQuestionComboBox.getValue();
+
+        Set<String> used = new HashSet<>();
+        if (selected1 != null) used.add(selected1);
+        if (selected2 != null) used.add(selected2);
+        if (selected3 != null) used.add(selected3);
+
+        if (changedBox != FirstQuestionComboBox) {
+            updateComboBox(FirstQuestionComboBox, selected1, used);
+        }
+        if (changedBox != SecondQuestionComboBox) {
+            updateComboBox(SecondQuestionComboBox, selected2, used);
+        }
+        if (changedBox != ThirdQuestionComboBox) {
+            updateComboBox(ThirdQuestionComboBox, selected3, used);
+        }
+    }
+
+    private void updateComboBox(ComboBox<String> box, String currentSelection, Set<String> used) {
+        Set<String> filteredUsed = new HashSet<>(used);
+        filteredUsed.remove(currentSelection);
+
+        List<String> available = SecQuestionList.stream()
+                .filter(q -> !filteredUsed.contains(q))
+                .toList();
+
+        if (!box.getItems().equals(available)) {
+            box.setItems(FXCollections.observableArrayList(available));
+        }
+
+        if (available.contains(currentSelection)) {
+            box.setValue(currentSelection);
+        } else {
+            box.setValue(null);
+        }
     }
 
     @FXML
-    public void RegisterButtonAction() throws IOException {
-        User user = ApplicationState.getCurrentUser();
+    public void RegisterButtonAction () throws IOException {
+
+        String questionOne = FirstQuestionComboBox.getValue();
+        String questionTwo = SecondQuestionComboBox.getValue();
+        String questionThree = ThirdQuestionComboBox.getValue();
 
         String answerOne = FirstAnswerTextField.getText();
         String answerTwo = SecondAnswerTextField.getText();
         String answerThree = ThirdAnswerTextField.getText();
 
-        String questionOne = firstQuestionComboBox.getValue();
-        String questionTwo = secondQuestionComboBox.getValue();
-        String questionThree = thirdQuestionComboBox.getValue();
+        UserSecurityQuestion userSecurityQuestion = new UserSecurityQuestion(tempUser);
+        userSecurityQuestion.setQuestionOne(questionOne);
+        userSecurityQuestion.setAnswerOne(answerOne);
+        userSecurityQuestion.setQuestionTwo(questionTwo);
+        userSecurityQuestion.setAnswerTwo(answerTwo);
+        userSecurityQuestion.setQuestionThree(questionThree);
+        userSecurityQuestion.setAnswerThree(answerThree);
 
-        UserSecurityQuestion userSecQuestions = new UserSecurityQuestion(user);
-        userSecQuestions.setQuestionOne(questionOne);
-        userSecQuestions.setAnswerOne(answerOne);
-        userSecQuestions.setQuestionTwo(questionTwo);
-        userSecQuestions.setAnswerTwo(answerTwo);
-        userSecQuestions.setQuestionThree(questionThree);
-        userSecQuestions.setAnswerThree(answerThree);
-
-        IUserSecurityQuestionDAO dao = new SqliteUserSecurityQuestionDAO();
-        dao.createQuestion(userSecQuestions);
+        AuthenticationService authenticationService = new AuthenticationService();
+        authenticationService.register(tempUser);
+        SqliteUserSecurityQuestionDAO dao = new SqliteUserSecurityQuestionDAO();
+        dao.createQuestion(userSecurityQuestion);
 
         Stage stage = (Stage) RegisterButton.getScene().getWindow();
         FXMLLoader fxmlLoader = new FXMLLoader(HelloApplication.class.getResource("prompt-email-view.fxml"));
@@ -82,7 +143,7 @@ public class AddSecurityQuestionController {
     }
 
     @FXML
-    public void BackButtonAction() throws IOException {
+    public void BackButtonAction () throws IOException {
         Stage stage = (Stage) BackButton.getScene().getWindow();
         FXMLLoader fxmlLoader = new FXMLLoader(HelloApplication.class.getResource("register-view.fxml"));
         Scene scene = new Scene(fxmlLoader.load(), HelloApplication.WIDTH, HelloApplication.HEIGHT);
